fix: mark json files as resources

--- a/FIBA_OT_sim/FIBA_OT_sim/FIBA_OT_sim.csproj
+++ b/FIBA_OT_sim/FIBA_OT_sim/FIBA_OT_sim.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Resource Include="Resources\exibitions.json" />
+    <Resource Include="Resources\groups.json" />
   </ItemGroup>
 
 </Project>
