--- a/FIBA_OT_sim/FIBA_OT_sim_Tests/FIBA_OT_sim_Tests.csproj
+++ b/FIBA_OT_sim/FIBA_OT_sim_Tests/FIBA_OT_sim_Tests.csproj
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +15,10 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FIBA_OT_sim\FIBA_OT_sim.csproj" />
   </ItemGroup>
 
   <ItemGroup>
